--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -53,6 +52,8 @@
         android:hint="Buy"
         android:layout_marginRight="16dp"
         android:gravity="center"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true" />
 
